# standard_pso

./: .gitignore  LICENSE  PSO.c  README.md  ReadMe.txt  Results.md  alea.c  build.sh  cec2005data.c  coil_compression_spring.c  lennard_jones.c  main.c  main.h  mersenne.c  perf.c  pressure_vessel.c  problemDef.c  rd.c  rd.h  run_tests.sh  tools.c
c-version/: CMakeLists.txt  KISS.c  main.c  main.h  problemDef.c  wyhash.h
validation/: .gitignore  Makefile  README.md  build.sh  perf.c  problemDef.c  util.c  validation.c  validation.h
